--- a/files/config.json
+++ b/files/config.json
@@ -1,38 +1,34 @@
 {
-  "quantity": 5,
+  "quantity": 3,
   "path": {
-    "base": "/home/vinicius/Documents/parIDF/files/Modelobase_V16.idf",
-    "destination": "/home/vinicius/Documents/parIDF/output",
+    "base": "/home/vinicius/Documents/versionada/parIDF/files/HV_base.idf",
+    "destination": "/home/vinicius/Documents/versionada/parIDF/output",
     "weatherFilename": "BRA_SP_Sao_Paulo.epw",
     "parameterFile": "parameter.csv",
     "filename": "file"
   },
   "variables": {
-    "AirflowNetwork:SimulationControl": {
-      "identifiers": {
-        "NV": {
-          "Ratio of Building Width Along Short Axis to Width Along Long Axis": {
-            "alg": "MonteCarlo",
-            "parameters": {
-              "min": 0.1,
-              "max": 1,
-              "precision": 0.01
-            }
-          }
-        }
-      }
-    },
     "WindowMaterial:SimpleGlazingSystem": {
       "identifiers": {
         "glazing": {
           "Solar Heat Gain Coefficient": {
             "alg": "MonteCarlo",
             "parameters": {
-              "min": 0.2,
-              "max": 0.9,
+              "min": 0.20,
+              "max": 0.90,
               "precision": 0.01
             }
           }
+        }
+      }
+    },
+    "Zone": {
+          "Z Origin {m}": {
+            "alg": "MonteCarlo",
+            "parameters": {
+              "min": 2.7,
+              "max": 29.7,
+              "precision": 0.1
         }
       }
     },
@@ -75,8 +71,8 @@
           "Thermal Resistance {m2-K/W}": {
             "alg": "MonteCarlo",
             "parameters": {
-              "min": 0.0803,
-              "max": 3.159,
+              "min": 0.10,
+              "max": 3.16,
               "precision": 0.01
             }
           }
@@ -90,15 +86,15 @@
             "alg": "MonteCarlo",
             "parameters": {
               "min": 100,
-              "max": 5000,
+              "max": 3600,
               "precision": 0.1
             }
           },
           "Solar Absorptance": {
             "alg": "MonteCarlo",
             "parameters": {
-              "min": 0.2,
-              "max": 1,
+              "min": 0.20,
+              "max": 0.90,
               "precision": 0.01
             }
           }
@@ -112,7 +108,7 @@
             "alg": "MonteCarlo",
             "parameters": {
               "min": 0.05,
-              "max": 1,
+              "max": 1.00,
               "precision": 0.01
             },
             "change": {
@@ -167,7 +163,7 @@
                 "Depth as Fraction of Window/Door Height {dimensionless}": {
                   "alg": "MonteCarlo",
                   "parameters": {
-                    "min": 0.001,
+                    "min": 0.01,
                     "max": 2.75,
                     "precision": 0.01
               },
@@ -184,11 +180,11 @@
                         "FenestrationSurface:Detailed": {
                           "identifiers": {
                             "Zn1_par1_jan": {
-                              "Vertex 2 Z-coordinate {m}": {
+                              "Vertex 1 Z-coordinate {m}": {
                                 "alg": "MonteCarlo",
                                 "parameters": {
-                                  "min": 0.17040816,
-                                  "max": 2.3744898,
+                                  "min": 1.02,
+                                  "max": 2.67,
                                   "precision": 0.01
                                 },
                                 "change": {
@@ -265,7 +261,7 @@
                                   "FenestrationSurface:Detailed": {
                                     "identifiers": {
                                       "Zn1_par1_jan": {
-                                        "Vertex 3 Z-coordinate {m}": {
+                                        "Vertex 4 Z-coordinate {m}": {
                                           "alg": "SameValue",
                                           "parameters": {
                                             "value": "parent"
@@ -273,13 +269,13 @@
                                         }
                                       },
                                       "Zn1_par4_jan": {
-                                        "Vertex 2 Z-coordinate {m}": {
+                                        "Vertex 1 Z-coordinate {m}": {
                                           "alg": "SameValue",
                                           "parameters": {
                                             "value": "parent"
                                           }
                                         },
-                                        "Vertex 3 Z-coordinate {m}": {
+                                        "Vertex 4 Z-coordinate {m}": {
                                           "alg": "SameValue",
                                           "parameters": {
                                             "value": "parent"
